Finalizamos a parte de cadastro e de entrar na conta dos usuarios.
