# back-end/routes/autenticacaoRoute.js
@@ -1,0 +1,14 @@
+import express from 'express'
+import AutenticacaoController from '../controllers/autenticacaoController.js'
+
+const router = express.Router()
+
+let ctrl = new AutenticacaoController()
+
+router.post("/token", (req, res) => {
+    // #swagger.tags = ['Autenticação']
+
+    ctrl.token(req, res)
+})
+
+export default router
