# back-end/routes/usuarioRoute.js
@@ -1,20 +1,30 @@
 import express from 'express'
 import UsuarioController from '../controllers/usuarioController.js'
+import AuthMiddleware from '../middlewares/authMiddleware.js'
 
 const router = express.Router()
 
 let ctrl = new UsuarioController()
+let auth = new AuthMiddleware()
 
-router.get("/", (req, res) => {
+router.get("/", auth.validar, (req, res) => {
   // #swagger.tags = ['Usuário']
-    // #swagger.summary = 'Endpoint para retornar todos os usuários'
+  // #swagger.summary = 'Endpoint para retornar todos os usuários'
+  /* #swagger.security = [{
+          "bearerAuth": []
+     }] 
+  */
 
     ctrl.listar(req, res)
 })
 
-router.get("/:id", (req, res) => {
+router.get("/:id", auth.validar, (req, res) => {
   //#swagger.tags = ['Usuário']
   //#swagger.summary = 'Retorna um usuário baseado em um código'
+  /* #swagger.security = [{
+          "bearerAuth": []
+     }] 
+  */
 
   ctrl.obter(req, res)
 })
@@ -35,6 +45,13 @@ router.post("/", (req, res) => {
   */
 
   ctrl.gravar(req, res)
+})
+
+router.post("/entrar", (req, res) => {
+  //#swagger.tags = ['Usuário']
+  //#swagger.summary = 'Entrar em uma conta de um usuário'
+
+  ctrl.entrar(req, res)
 })
 
 export default router
